--- a/src/css/ultrawide.css
+++ b/src/css/ultrawide.css
@@ -1,4 +1,4 @@
-@media all and (min-aspect-ratio: 18/9) and (min-width: 1800px) {
+@media all and (min-aspect-ratio: 18/9) and (min-width: 1700px) {
   .hero .hero-artboard {
     top: 30vh;
   }
@@ -26,5 +26,39 @@
     padding-top: 0;
     margin-top: 0;
     top: 80px;
+  }
+}
+
+@media all and (min-width: 1500px) {
+  .abstract {
+    display: inline-block;
+    position: absolute;
+    max-width: 300px;
+  }
+
+  .circle {
+    left: -180px;
+    top: 28%;
+    opacity: 0.3;
+  }
+
+  .circle-2 {
+    right: -110px;
+    top: 10%;
+    opacity: 0.5;
+    width: 200px;
+  }
+
+  .triangle {
+    right: -150px;
+    top: 50%;
+    transform: rotate(10deg);
+    opacity: 0.7;
+  }
+
+  .dots {
+    left: -140px;
+    top: 100%;
+    transform: rotate(-20deg);
   }
 }
