--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -59,4 +59,17 @@
     top: -70px;
     right: 5px;
   }
+
+  .services-content {
+    padding-top: 26vh;
+  }
+
+  .services-text-wrapper .services-para {
+    font-size: 16px;
+    width: 95%;
+  }
+
+  .graph-container {
+    /* top: 10vh; */
+  }
 }
