--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -44,10 +44,18 @@
 
   .sittingWoman {
     width: 150px;
+    transform: translateX(6px) translateY(-4px);
   }
 
-  div.rectangles {
-    background-position: left 20%;
+  div.rectangles.sixth.img-space {
+    /* background-position: left 20%; */
+    padding-left: 0;
+    height: 45vh;
+    min-height: 300px;
+  }
+
+  .rectangles img {
+    align-self: flex-start;
   }
 
   section.services {
@@ -67,6 +75,10 @@
   .services-text-wrapper .services-para {
     font-size: 16px;
     width: 95%;
+  }
+
+  .graph-section {
+    margin-top: -30px;
   }
 
   .graph-container {
