--- a/src/css/tablet.css
+++ b/src/css/tablet.css
@@ -1,19 +1,10 @@
 @media all and (max-width: 900px), all and (orientation: portrait) {
   section.knowMore {
-    background-color: #f6f6f6;
     z-index: -1;
   }
 
   section.about {
     padding-top: 1rem;
-  }
-
-  section.services {
-    /* margin-top: -13vmin; */
-  }
-
-  .services-content {
-    /* padding-top: calc(250px + 10vh); */
   }
 
   svg[class*="desktop"] {
@@ -28,9 +19,6 @@
   .graph-container svg[class*="mobile"] {
     display: block;
     min-height: unset;
-  }
-
-  .graph-container {
   }
 
   .mobile-popup {
@@ -238,6 +226,33 @@
     height: 125%;
     width: 100%;
     min-height: 200px;
+  }
+
+  .industry .industry-content {
+    padding-top: 100px;
+    width: 80vw;
+    margin-left: 10vw;
+  }
+
+  .industry .industry-title {
+    width: 90%;
+    font-size: 3rem;
+  }
+
+  .industry .brandbox {
+    width: 100%;
+    height: 350px;
+    justify-content: flex-start;
+    margin-top: 0px;
+  }
+
+  .industry .brandbox img {
+    width: 25%;
+    max-width: 25%;
+  }
+
+  section.knowMore {
+    margin-top: -10vh;
   }
 }
 
